@@ -27,8 +27,9 @@ ubuntu-dev-tools (0.109) UNRELEASED; urgency=low
     - Add new --lpinstance and --no-conf options.
     - Support configuration files.
     - Fix 'str' object has no attribute 'startwith' crash caused by a typo.
+    - Fix crash if uploading to ubuntu without building the package before.
 
- -- Benjamin Drung <bdrung@ubuntu.com>  Tue, 21 Dec 2010 22:47:20 +0100
+ -- Benjamin Drung <bdrung@ubuntu.com>  Wed, 22 Dec 2010 00:51:48 +0100
 
 ubuntu-dev-tools (0.108) experimental; urgency=low
 
